--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,14 @@ h3 {
   color: #25316D;
 }
 
-
+.logo {
+  
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
+  
+}
 
 /*Navigation Bar*/
 
@@ -31,6 +38,9 @@ h3 {
 .topnav {
   background-color: #333;
   overflow: hidden;
+}
+.ytsubscribe {
+  float: right;
 }
 
 /* Style the links inside the navigation bar */
